--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -206,13 +206,13 @@
 {% if site.ba_track_id %}
 <script>
     // dynamic User by Hux
-    var _baId = '{{ site.ba_track_id }}';
+    // var _baId = '{{ site.ba_track_id }}';
 
     // Originial
     var _hmt = _hmt || [];
     (function() {
       var hm = document.createElement("script");
-      hm.src = "//hm.baidu.com/hm.js?" + _baId;
+      hm.src = "//hm.baidu.com/hm.js?f0bbcff2c83fcd4e0ffd374caa8a4046";
       var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
